--- a/src/main/resources/org/superservice/superservice/nuevaVenta.fxml
+++ b/src/main/resources/org/superservice/superservice/nuevaVenta.fxml
@@ -5,23 +5,25 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
 <?import javafx.scene.control.Separator?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.layout.BorderPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.text.Font?>
 
-
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="800.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1">
+<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="600.0" prefWidth="1020.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.superservice.superservice.controllers.NuevaVentaController">
    <top>
-      <GridPane prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: #ffeeee;" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="100.0" prefWidth="800.0" style="-fx-background-color: #456789;" BorderPane.alignment="CENTER">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" maxWidth="170.50745212880412" minWidth="10.0" prefWidth="200.0" />
             <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="169.3582233064397" minWidth="10.0" prefWidth="200.0" />
+            <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.65671416767248" minWidth="10.0" prefWidth="100.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="175.65671416767248" minWidth="0.0" prefWidth="10.0" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="294.940290879768" minWidth="10.0" prefWidth="134.91045022217946" />
             <ColumnConstraints hgrow="SOMETIMES" maxWidth="144.9402892753685" minWidth="10.0" prefWidth="134.68655482526094" />
@@ -33,74 +35,103 @@
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Label text="Buscar por:" GridPane.columnIndex="1" />
-            <Button mnemonicParsing="false" text="Buscar repuesto" GridPane.rowIndex="1" />
-            <ComboBox prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-            <TextField />
-            <Separator orientation="VERTICAL" prefHeight="95.0" prefWidth="4.0" GridPane.columnIndex="2" GridPane.halignment="CENTER" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER" />
-            <Button mnemonicParsing="false" text="Agregar seleccionado" GridPane.columnIndex="3" GridPane.rowIndex="2" />
-            <Button mnemonicParsing="false" text="Limpiar lista de venta" GridPane.columnIndex="3" GridPane.rowIndex="1" />
-            <Button mnemonicParsing="false" text="Quitar repuesto" GridPane.columnIndex="3" />
-            <Label text="Repuestos para vender:" GridPane.rowIndex="2" />
-            <Label text="Repuestos a vender:" GridPane.columnIndex="5" GridPane.rowIndex="2" />
+            <Label text="Buscar por:" textFill="WHITE" GridPane.columnIndex="1" />
+            <Button fx:id="btnBuscar" mnemonicParsing="false" onAction="#buscarConFiltros" text="Buscar con filtro" GridPane.rowIndex="1" />
+            <ComboBox fx:id="comboBuscarPor" prefWidth="150.0" GridPane.columnIndex="2" />
+            <TextField fx:id="tfBuscar" />
+            <Separator orientation="VERTICAL" prefHeight="95.0" prefWidth="4.0" GridPane.columnIndex="3" GridPane.halignment="CENTER" GridPane.rowSpan="2147483647" GridPane.valignment="CENTER" />
+            <Button fx:id="btnAgregarLista" mnemonicParsing="false" onAction="#agregarRepuesto" text="Agregar seleccionado" GridPane.columnIndex="4" GridPane.rowIndex="2" />
+            <Button fx:id="btnLimpiarLista" mnemonicParsing="false" onAction="#limpiarLista" text="Limpiar lista de venta" GridPane.columnIndex="4" GridPane.rowIndex="1" />
+            <Button mnemonicParsing="false" text="Quitar repuesto" GridPane.columnIndex="4" />
+            <Label text="Repuestos para vender:" textFill="WHITE" GridPane.rowIndex="2" />
+            <Label text="Repuestos a vender:" textFill="WHITE" GridPane.columnIndex="6" GridPane.rowIndex="2" />
+            <Button fx:id="btnTodosRepuestos" mnemonicParsing="false" onAction="#todosRepuestos" text="Todos los repuestos" GridPane.columnIndex="1" GridPane.rowIndex="1" />
          </children>
          <BorderPane.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets left="5.0" right="5.0" top="5.0" />
          </BorderPane.margin>
          <padding>
             <Insets left="5.0" right="5.0" />
          </padding>
       </GridPane>
    </top>
-   <right>
-      <ListView prefHeight="486.0" prefWidth="300.0" style="-fx-background-color: #456789;" BorderPane.alignment="CENTER">
-         <BorderPane.margin>
-            <Insets bottom="10.0" right="10.0" top="10.0" />
-         </BorderPane.margin>
-      </ListView>
-   </right>
-   <center>
-      <TableView prefHeight="500.0" prefWidth="482.0" BorderPane.alignment="CENTER">
-        <columns>
-          <TableColumn prefWidth="90.26864004135132" text="Cod Barra" />
-          <TableColumn prefWidth="171.22391510009766" text="Nombre" />
-            <TableColumn prefWidth="110.328369140625" text="Marca" />
-            <TableColumn prefWidth="99.58209228515625" text="Precio" />
-        </columns>
-         <BorderPane.margin>
-            <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
-         </BorderPane.margin>
-      </TableView>
-   </center>
    <bottom>
-      <GridPane prefHeight="70.0" style="-fx-background-color: #ffeeee;" BorderPane.alignment="CENTER">
+      <GridPane prefHeight="70.0" style="-fx-background-color: #456789;" BorderPane.alignment="CENTER">
         <columnConstraints>
-            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="492.7164123222435" minWidth="160.0" prefWidth="160.0" />
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="492.7164123222435" minWidth="160.0" prefWidth="291.88056147340217" />
-          <ColumnConstraints hgrow="SOMETIMES" maxWidth="400.29850460739976" minWidth="10.0" prefWidth="284.00002165259247" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="654.0596815531176" minWidth="160.0" prefWidth="306.3581618089991" />
+            <ColumnConstraints halignment="LEFT" hgrow="SOMETIMES" maxWidth="654.0596815531176" minWidth="35.82089600506754" prefWidth="292.02988051603376" />
+            <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="654.0596815531176" minWidth="35.82089600506754" prefWidth="186.73129943453375" />
+          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" maxWidth="492.7164123222435" minWidth="100.31346801363532" prefWidth="198.91047727262367" />
+          <ColumnConstraints halignment="RIGHT" hgrow="SOMETIMES" maxWidth="400.29850460739976" minWidth="10.0" prefWidth="206.194025295884" />
         </columnConstraints>
         <rowConstraints>
           <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="30.0" valignment="CENTER" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
-            <Button mnemonicParsing="false" prefHeight="26.0" prefWidth="150.0" text="Emitir nota retiro" GridPane.columnIndex="1" GridPane.rowIndex="1">
+            <Button fx:id="btnEmitirNota" alignment="CENTER" mnemonicParsing="false" onAction="#emitirNotaRetiro" prefHeight="25.0" prefWidth="150.0" text="Emitir nota retiro" GridPane.columnIndex="3" GridPane.rowIndex="1">
                <GridPane.margin>
                   <Insets bottom="5.0" />
                </GridPane.margin>
             </Button>
-            <CheckBox mnemonicParsing="false" text="Imprimir nota" GridPane.columnIndex="1" />
-            <Label text="TOTAL: $ 000000.00" GridPane.columnIndex="2" />
-            <Button mnemonicParsing="false" text="Pagar" GridPane.columnIndex="2" GridPane.rowIndex="1">
+            <CheckBox fx:id="checkImprimirNota" mnemonicParsing="false" text="Imprimir nota." textFill="WHITE" GridPane.columnIndex="3" />
+            <Label fx:id="labelTotal" text="TOTAL: $ 0" textFill="WHITE" GridPane.columnIndex="4">
                <GridPane.margin>
-                  <Insets bottom="5.0" />
+                  <Insets right="5.0" />
+               </GridPane.margin>
+               <font>
+                  <Font size="16.0" />
+               </font></Label>
+            <Button fx:id="btnPagar" disable="true" mnemonicParsing="false" onAction="#pagar" prefWidth="150.0" style="-fx-background-color: #9ae084;" text="Hacer pago" GridPane.columnIndex="4" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="5.0" right="5.0" />
+               </GridPane.margin>
+               <tooltip>
+                  <Tooltip text="Debe haber emitido la nota de retiro para hacer el pago." wrapText="true" />
+               </tooltip>
+            </Button>
+            <Button fx:id="btnVolver" mnemonicParsing="false" onAction="#volver" prefWidth="100.0" text="Volver" GridPane.halignment="LEFT" GridPane.rowIndex="1">
+               <GridPane.margin>
+                  <Insets bottom="5.0" left="5.0" />
                </GridPane.margin>
             </Button>
-            <Button mnemonicParsing="false" prefWidth="100.0" text="Volver" GridPane.rowIndex="1" />
+            <Label prefHeight="50.0" prefWidth="250.0" text="*Para continuar con el pago es necesario emitir la nota de retiro." textAlignment="JUSTIFY" textFill="WHITE" wrapText="true" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowSpan="2" GridPane.valignment="BOTTOM" />
+            <CheckBox fx:id="checkRutaPredeterminada" mnemonicParsing="false" prefHeight="34.0" prefWidth="119.0" selected="true" text="Guardar en ruta predeterminada." textFill="WHITE" wrapText="true" GridPane.columnIndex="2" />
          </children>
          <BorderPane.margin>
-            <Insets left="10.0" right="10.0" />
+            <Insets bottom="5.0" left="5.0" right="5.0" />
          </BorderPane.margin>
       </GridPane>
    </bottom>
+   <center>
+      <HBox alignment="CENTER" prefHeight="100.0" style="-fx-background-color: #565678;" BorderPane.alignment="CENTER">
+         <children>
+            <TableView fx:id="tableRepuestos" prefWidth="490.0">
+              <columns>
+                <TableColumn fx:id="colCodBarra" prefWidth="90.26864004135132" text="Cod Barra" />
+                <TableColumn fx:id="colNombre" prefWidth="171.22391510009766" text="Nombre" />
+                  <TableColumn fx:id="colMarca" prefWidth="126.089599609375" text="Marca" />
+                  <TableColumn fx:id="colPrecio" prefWidth="101.014892578125" text="Precio" />
+              </columns>
+            </TableView>
+            <Label maxHeight="1.7976931348623157E308" text="&gt;" textAlignment="CENTER" textFill="WHITE">
+               <font>
+                  <Font size="30.0" />
+               </font>
+            </Label>
+            <TableView fx:id="tablaDetallesVenta" prefWidth="490.0">
+              <columns>
+                <TableColumn fx:id="colDetNombre" prefWidth="152.59704965353012" text="Nombre" />
+                <TableColumn fx:id="colDetMarca" prefWidth="109.61186218261719" text="Marca" />
+                  <TableColumn fx:id="colDetPrecioUni" prefWidth="83.8209228515625" text="Precio Uni." />
+                  <TableColumn fx:id="colDetCantidad" prefWidth="66.6268310546875" text="Cantidad" />
+                  <TableColumn fx:id="colDetSubTotal" prefWidth="77.3731689453125" text="Sub-total" />
+              </columns>
+            </TableView>
+         </children>
+         <BorderPane.margin>
+            <Insets left="5.0" right="5.0" />
+         </BorderPane.margin>
+      </HBox>
+   </center>
 </BorderPane>
