--- a/src/main/resources/org/superservice/superservice/crearUsuario.fxml
+++ b/src/main/resources/org/superservice/superservice/crearUsuario.fxml
@@ -1,42 +1,64 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ComboBox?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.superservice.superservice.controllers.CrearUsuarioController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.superservice.superservice.controllers.CrearUsuarioController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="220.999981658181" minWidth="10.0" prefWidth="199.50748898239976" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="202.23881222458726" minWidth="10.0" prefWidth="200.08952023239976" />
   </columnConstraints>
   <rowConstraints>
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button fx:id="btnVolver" mnemonicParsing="false" onAction="#volverAlLogin" text="Volver" GridPane.rowIndex="7" />
-      <Button fx:id="btnCargarUsuario" mnemonicParsing="false" onAction="#cargarUsuario" text="Crear Usuario" GridPane.columnIndex="1" GridPane.rowIndex="7" />
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="53.0" prefWidth="409.0" text="Crear Usuario" textAlignment="CENTER" GridPane.columnSpan="2147483647">
+      <Button fx:id="btnVolver" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#volverAlLogin" prefHeight="30.0" prefWidth="100.0" text="Volver" GridPane.halignment="LEFT" GridPane.rowIndex="8" />
+      <Button fx:id="btnCargarUsuario" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#cargarUsuario" prefHeight="30.0" prefWidth="100.0" text="Crear Usuario" GridPane.columnIndex="1" GridPane.halignment="RIGHT" GridPane.rowIndex="8" />
+      <Label text="Nombre de Usuario" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
          <font>
-            <Font size="36.0" />
+            <Font size="15.0" />
+         </font></Label>
+      <TextField fx:id="tfNombre" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+      <Label text="Contraseña" GridPane.rowIndex="6" GridPane.valignment="BOTTOM">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <Label text="Elija un rol" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <ComboBox fx:id="comboRoles" prefWidth="150.0" GridPane.rowIndex="5" GridPane.valignment="TOP" />
+      <Label text="Crear usuario" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.valignment="TOP">
+         <font>
+            <Font size="28.0" />
          </font>
       </Label>
-      <Label text="Nombre de Usuario" GridPane.rowIndex="1" />
-      <TextField fx:id="tfNombre" GridPane.rowIndex="2" />
-      <Label text="Contraseña" GridPane.rowIndex="5" />
-      <TextField fx:id="tfContrasenia" GridPane.rowIndex="6" />
-      <Label text="Elija un rol" GridPane.rowIndex="3" />
-      <ComboBox fx:id="comboRoles" prefWidth="150.0" GridPane.rowIndex="4" />
+      <ImageView fitHeight="115.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+         <image>
+            <Image url="@../../../imgs/icono.png" />
+         </image>
+      </ImageView>
+      <PasswordField fx:id="tfContrasenia" GridPane.rowIndex="7" GridPane.valignment="TOP" />
    </children>
+   <padding>
+      <Insets left="10.0" right="10.0" top="10.0" />
+   </padding>
 </GridPane>
