--- a/src/main/resources/org/superservice/superservice/login.fxml
+++ b/src/main/resources/org/superservice/superservice/login.fxml
@@ -1,44 +1,65 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.geometry.Insets?>
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="463.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.superservice.superservice.controllers.LoginController">
+<GridPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="465.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="org.superservice.superservice.controllers.LoginController">
   <columnConstraints>
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="215.999981658181" minWidth="10.0" prefWidth="200.23881222458726" />
     <ColumnConstraints hgrow="SOMETIMES" maxWidth="200.0298350897791" minWidth="10.0" prefWidth="200.0298350897791" />
   </columnConstraints>
   <rowConstraints>
-      <RowConstraints maxHeight="74.79104369179024" minHeight="10.0" prefHeight="61.17910140053047" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="122.50746192940633" minHeight="10.0" prefHeight="122.50746192940633" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints vgrow="SOMETIMES" />
       <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
       <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-      <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints maxHeight="30.0" minHeight="30.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="40.0" minHeight="40.0" prefHeight="40.0" vgrow="SOMETIMES" />
+      <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
+    <RowConstraints maxHeight="50.0" minHeight="50.0" prefHeight="50.0" vgrow="SOMETIMES" />
   </rowConstraints>
    <children>
-      <Button maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" prefHeight="30.0" prefWidth="100.0" text="Salir" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
-      <Button fx:id="crearUsuario" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#crearUsuario" prefHeight="30.0" prefWidth="100.0" text="Crear Usuario" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
-      <Label alignment="CENTER" contentDisplay="CENTER" prefHeight="53.0" prefWidth="409.0" text="Iniciar Sesión" textAlignment="CENTER" GridPane.columnSpan="2147483647">
+      <Button fx:id="btnSalir" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#salir" prefHeight="30.0" prefWidth="100.0" text="Salir" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+      <Button fx:id="btnCrearUsuario" maxHeight="30.0" maxWidth="100.0" minHeight="30.0" minWidth="100.0" mnemonicParsing="false" onAction="#crearUsuario" prefHeight="30.0" prefWidth="100.0" text="Crear Usuario" GridPane.columnIndex="1" GridPane.halignment="CENTER" GridPane.rowIndex="8" GridPane.valignment="CENTER" />
+      <Label alignment="CENTER" contentDisplay="CENTER" maxHeight="40.0" minHeight="40.0" prefHeight="40.0" text="Iniciar Sesión" textAlignment="JUSTIFY" GridPane.columnSpan="2147483647" GridPane.halignment="CENTER" GridPane.valignment="TOP">
          <font>
-            <Font size="36.0" />
+            <Font size="28.0" />
          </font>
       </Label>
-      <TextField GridPane.rowIndex="3" GridPane.valignment="TOP" />
-      <Button fx:id="btnIniciarSesion" maxHeight="45.0" maxWidth="150.0" minHeight="45.0" minWidth="150.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="45.0" prefWidth="150.0" text="Iniciar Sesión" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="6" GridPane.valignment="CENTER" />
-      <TextField GridPane.rowIndex="5" GridPane.valignment="TOP" />
-      <Label text="Nombre de Usuario" GridPane.rowIndex="2" GridPane.valignment="BOTTOM" />
-      <Label text="Contraseña" GridPane.rowIndex="4" GridPane.valignment="BOTTOM" />
+      <TextField fx:id="tfNombreUsuario" GridPane.rowIndex="3" GridPane.valignment="TOP" />
+      <Button fx:id="btnIniciarSesion" maxHeight="30.0" maxWidth="150.0" minHeight="30.0" minWidth="150.0" mnemonicParsing="false" onAction="#iniciarSesion" prefHeight="30.0" prefWidth="150.0" text="Iniciar Sesión" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="7" GridPane.valignment="CENTER" />
+      <Label text="Nombre de Usuario" GridPane.rowIndex="2" GridPane.valignment="BOTTOM">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <Label text="Contraseña" GridPane.rowIndex="4" GridPane.valignment="BOTTOM">
+         <font>
+            <Font size="15.0" />
+         </font></Label>
+      <ImageView fitHeight="115.0" fitWidth="130.0" pickOnBounds="true" preserveRatio="true" GridPane.columnSpan="2" GridPane.halignment="CENTER" GridPane.rowIndex="1" GridPane.valignment="TOP">
+         <image>
+            <Image url="@../../../imgs/icono.png" />
+         </image>
+      </ImageView>
+      <PasswordField fx:id="tfContrasenia" GridPane.rowIndex="5" GridPane.valignment="TOP" />
+      <Label fx:id="labelRecuContra" onMouseClicked="#clickedRecuperarContrasenia" text="Recuperar contraseña..." textFill="#0050fc" GridPane.rowIndex="6" GridPane.valignment="TOP">
+         <cursor>
+            <Cursor fx:constant="HAND" />
+         </cursor>
+      </Label>
    </children>
    <padding>
-      <Insets left="10.0" right="10.0" />
+      <Insets left="10.0" right="10.0" top="10.0" />
    </padding>
 </GridPane>
